Fixed tags for better accessibility

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <header>
         <div class="logo">
           <a href="#">
-            <img src="./images/logo.svg" alt="Logo" srcset="">
+            <img src="./images/logo.svg" alt="Logo">
           </a>
         </div>
   
@@ -52,13 +52,13 @@
         <div class="post__img">
           <picture>
             <source srcset="./images/image-web-3-mobile.jpg" media="(max-width:600px)">
-            <img src="./images/image-web-3-desktop.jpg" alt="desing, abstract, 3d, shapes" srcset="">
+            <img src="./images/image-web-3-desktop.jpg" alt="desing, abstract, 3d, shapes">
           </picture>
         </div>
   
-        <h2 class="post__title">
+        <h1 class="post__title">
           The Bright Future of Web 3.0?
-        </h2>
+        </h1>
   
         <p class="post__text">
           We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
@@ -88,10 +88,10 @@
         </div>
       </aside>
   
-      <section class="tops">
+      <section role="listitem" class="tops">
         <div class="tops__preview">
           <div class="tops__preview__img">
-            <img src="./images/image-retro-pcs.jpg" alt="Computer and video games console retro" srcset="">
+            <img src="./images/image-retro-pcs.jpg" alt="Computer and video games console retro">
           </div>
           <div class="tops__preview__wrapper">
             <span class="tops__preview__number">01</span>
@@ -106,7 +106,7 @@
   
         <div class="tops__preview">
           <div class="tops__preview__img">
-            <img src="./images/image-top-laptops.jpg" alt="Keyboard" srcset="">
+            <img src="./images/image-top-laptops.jpg" alt="Keyboard">
           </div>
           <div class="tops__preview__wrapper">
             <span class="tops__preview__number">02</span>
@@ -121,7 +121,7 @@
   
         <div class="tops__preview">
           <div class="tops__preview__img">
-            <img src="./images/image-gaming-growth.jpg" alt="Playstation 4 Controller" srcset="">
+            <img src="./images/image-gaming-growth.jpg" alt="Playstation 4 Controller">
           </div>
           <div class="tops__preview__wrapper">
             <span class="tops__preview__number">03</span>
