Fixed tags for better accessibility

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
       </aside>
   
-      <section role="listitem" class="tops">
+      <section role="group" class="tops">
         <div class="tops__preview">
           <div class="tops__preview__img">
             <img src="./images/image-retro-pcs.jpg" alt="Computer and video games console retro">
