Fixed tags for better accessibility

--- a/index.html
+++ b/index.html
@@ -69,35 +69,35 @@
       </main>
   
       <aside class="new-posts">
-        <h3 class="new-posts__title">New</h3>
+        <h2 class="new-posts__title">New</h3>
         <div class="new-posts__item">
-          <h4 class="new-posts__item__title">Hydrogen VS Electric Cars</h4>
+          <h3 class="new-posts__item__title">Hydrogen VS Electric Cars</h3>
           <p class="new-posts__item__text">Will hydrogen-fueled cars ever catch up to EVs?</p>
         </div>
   
         <div class="new-posts__item">
-          <h4 class="new-posts__item__title">The Downsides of AI Artistry</h4>
+          <h3 class="new-posts__item__title">The Downsides of AI Artistry</h3>
           <p class="new-posts__item__text">What are the possible adverse effects of on-demand AI image generation?</p>
           
         </div>
   
         <div class="new-posts__item">
-          <h4 class="new-posts__item__title">Is VC Funding Drying Up?</h4>
+          <h3 class="new-posts__item__title">Is VC Funding Drying Up?</h3>
           <p class="new-posts__item__text">Private funding by VC firms is down 50% YOY. We take a look at what that means.
           </p>
         </div>
       </aside>
   
-      <section role="group" class="tops">
+      <section class="tops">
         <div class="tops__preview">
           <div class="tops__preview__img">
             <img src="./images/image-retro-pcs.jpg" alt="Computer and video games console retro">
           </div>
           <div class="tops__preview__wrapper">
             <span class="tops__preview__number">01</span>
-            <h4 class="tops__preview__title">
+            <h3 class="tops__preview__title">
               Reviving Retro PCs
-            </h4>
+            </h3>
             <p class="tops__preview__text">
               What happens when old PCs are given modern upgrades?
             </p>
@@ -110,9 +110,9 @@
           </div>
           <div class="tops__preview__wrapper">
             <span class="tops__preview__number">02</span>
-            <h4 class="tops__preview__title">
+            <h3 class="tops__preview__title">
               Top 10 Laptops of 2022
-            </h4>
+            </h3>
             <p class="tops__preview__text">
               Our best picks for various needs and budgets.
             </p>
@@ -125,9 +125,9 @@
           </div>
           <div class="tops__preview__wrapper">
             <span class="tops__preview__number">03</span>
-            <h4 class="tops__preview__title">
+            <h3 class="tops__preview__title">
               The Growth of Gaming
-            </h4>
+            </h3>
             <p class="tops__preview__text">
               How the pandemic has sparked fresh opportunities.
             </p>
